# CompoST

./: .buildinfo  .bumpversion.cfg  .gitignore  Architecture.html  CompositeStandard.py  Development.html  IDs.html  Introduction.html  LICENSE  Logic.html  Mapping.html  README.md  Requirements.html  StorageFormat.html  Test_CI_dump.json  Test_clean.json  UseCases.html  UsingCompost.html  Utilities.py  compostSchema.json  extraUtilities.py  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  schema_metadata.txt  search.html  searchindex.js  store_JSON.py  store_hdf5.py
.github/ISSUE_TEMPLATE/: FEATURE_REQUEST_TEMPLATE.yml  ISSUE_FORM.yml
CompoST/: CompositeStandard.py  Utilities.py
ExampleFiles/v0.68b/: x_test_141.json  x_test_141.stp
Legacy/: CompositeStandard_0.2.py
OlderVersionDocs/v0.8.3/: Architecture.html  Development.html  Logic.html  Mapping.html  Undecided.html  Versions.html  genindex.html  index.html  objects.inv  search.html
OlderVersionDocs/v0.8.3/_sources/: Development.rst.txt  StorageFormat.rst.txt  UsingCompost.rst.txt  Versions.rst.txt  index.rst.txt
OlderVersionDocs/v0.8.3/_static/: bizstyle.js  documentation_options.js
TestScripts/: Laminate_Definition_Complete.json  Test_CI_dump.json  Test_CI_dump.txt  read_test_JSON.py  read_test_JSON_nocat.py
Tests/: test_main.py
_sources/: Architecture.rst.txt  Development.rst.txt  DevelopmentPlan.rst.txt  IDs.rst.txt  Introduction.rst.txt  Logic.rst.txt  Mapping.rst.txt  Requirements.rst.txt  StorageFormat.rst.txt  UseCases.rst.txt  UsingCompost.rst.txt  Versions.rst.txt  index.rst.txt
_static/: bizstyle.js  documentation_options.js
docs/source/: Architecture.rst  Introduction.rst  Logic.rst  Mapping.rst  StorageFormat.rst  UsingCompost.rst  Versions.rst  conf.py  index.rst
